--- a/production.yaml
+++ b/production.yaml
@@ -23,3 +23,9 @@ storage:
   previews: 'previews/'
   thumbnails: 'thumbnails/'
   torrents: 'torrents/'
+
+admin:
+  email: 'admin@example.com'
+
+signup:
+  enabled: false
