--- a/production.yaml
+++ b/production.yaml
@@ -24,8 +24,31 @@ storage:
   thumbnails: 'thumbnails/'
   torrents: 'torrents/'
 
+cache:
+  previews:
+    size: 1 # Max number of previews you want to cache
+
 admin:
   email: 'admin@example.com'
 
 signup:
   enabled: false
+  limit: 10 # When the limit is reached, registrations are disabled. -1 == unlimited
+
+user:
+  # Default value of maximum video BYTES the user can upload (does not take into account transcoded files).
+  # -1 == unlimited
+  video_quota: -1
+
+# If enabled, the video will be transcoded to mp4 (x264) with "faststart" flag
+# In addition, if some resolutions are enabled the mp4 video file will be transcoded to these new resolutions.
+# Uses a lot of CPU and increases storage!
+transcoding:
+  enabled: false
+  threads: 2
+  resolutions: # Only created if the original video has a higher resolution
+    240p: true
+    360p: true
+    480p: true
+    720p: true
+    1080p: true
